
(Richard Jones / Graham Triggs)
- New Browse code that allows customisation of the available indexes via dspace.cfg,
  and pluggable normalisation of the sort strings.
  Integration with both JSP-UI and XML-UI included.
  (S.F. Patches 1702233 and 1672065)

(Flavio Botelho)
- S.F. Patch 1764069 Replace "String" with "Integer" in PreparedStatement 
  Parameters where appropiate.

(Mark Diggory)
- Guard against output invalid unqualified Dublin Core in OAIDCCrosswalk.

(Graham Triggs / Brad Teale / Ed Yu)
- S.F. Patch 1679972 OAIDCCrosswalk NPE and invalid character fix

(Graham Triggs)
- Metadata Exporter (Implements request: #1444364)
- ConfigurationManager fix to honour log4j.configuration
- S.F. Patch 1749196 Oracle SQL in Bitstream Checker
- S.F. Patch 1740579 Patch for bug 1740454 (Concurrency)

(Larry Stone, Richard Rodgers, Sands Fish, Mark Diggory)
- S.F. Patch 1633596 Event System for DSpace 1.5

(Conal Tuohy)
- S.F. Patch 1751638 Set http disposition header to force download of large bitstreams

(Mark Diggory/Scott Phillips)
- Restructure Codebase and Build Process to support Addon functionality for DSpace
- Integrate Maven build into projects
- Add XMLUI and LNI to Endorsed Addons

(Claudia Juergen)
- SF Patch #1722557 for SF Bug #1549290 Suggest Features uses hard coded strings
- SF Patch #1450491 i18n configurable multilingualism support

(James Rutherford)
- Fixed SF bug #1727034 Method MetadataField.unique() is incorrect for null values
- Fixed SF bug #1614546 get rid of unused mets_bitstream_id column
- SF Patch #1638569 for SF Bug #1638565 Database Upgrade 12 to 13 missing content on new colums
- SF Patch #1620700 Add Community and Sub-Community to OAI Sets
- Removed unnecessary and unused edu.mit.dspace.MITSpecialGroup

(Tim Donohue)
- Added Configurable Submission to JSP-UI and XML-UI (updated version of SF Patch #1691345)

(Stuart Lewis)
- SF Patch #1737792 Patch for bug 1552760 - Submit interface looks bad in Safari