@@ -1070,6 +1070,7 @@ jsp.tools.edit-item-form.item                                   = Item's Authori
 jsp.tools.edit-item-form.itemID                                 = Item&nbsp;internal&nbsp;ID:
 jsp.tools.edit-item-form.itempage                               = Item page:
 jsp.tools.edit-item-form.modified                               = Last modified:
+jsp.tools.edit-item-form.move-item.button                       = Move Item
 jsp.tools.edit-item-form.msg                                    = This item was withdrawn from DSpace
 jsp.tools.edit-item-form.na                                     = N/A
 jsp.tools.edit-item-form.note                                   = PLEASE NOTE: These changes are not validated in any way. You are responsible for entering the data in the correct format. If you are not sure what the format is, please do NOT make changes.
@@ -1170,6 +1171,11 @@ jsp.tools.itemmap-main.info7                                    = Click on colle
 jsp.tools.itemmap-main.info8                                    = This collection has no items mapped into it.
 jsp.tools.itemmap-main.search.button                            = Search Authors
 jsp.tools.itemmap-main.title                                    = Item Mapper
+jsp.tools.move-item.button                                      = Move
+jsp.tools.move-item.collection.from.msg                         = Collection to move from
+jsp.tools.move-item.collection.to.msg                           = Collection to move to
+jsp.tools.move-item.item.name.msg                               = Name of the item to be moved
+jsp.tools.move-item.title                                       = Moving an item
 jsp.tools.upload-bitstream.info                                 = Select the bitstream to upload
 jsp.tools.upload-bitstream.title                                = Upload Bitstream
 jsp.tools.upload-bitstream.upload                               = Upload
